Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4191

HA removing self address breaks if a VIP is used.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.17
    • 0.18
    • C++ Clustering
    • None

    Description

      The HA broker was removing its own address from the set of cluster addresses to avoid useless self-connection attempts. However this completely breaks if a Virtual IP address (VIP) is used.

      The remove-self is not essential, self-connection attempts are prevented elsewhere. Backup brokers will be prevented from connecting to self by the same connection-observer as normal clients.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: